Edited the text in About and Index page

--- a/JoesUsedCars/Views/Home/About.cshtml
+++ b/JoesUsedCars/Views/Home/About.cshtml
@@ -8,6 +8,5 @@
 <h2>Trust Us, We are the only honest dealership</h2>
 
 <p>
-    Lorem ipsum would go here to hold place
-    for real text
+    You'll learn about our great deals!
 </p>
