--- a/JoesUsedCars/Views/Home/Index.cshtml
+++ b/JoesUsedCars/Views/Home/Index.cshtml
@@ -4,5 +4,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to Joe's Car Dealership Website!</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<p>This is the main website for the car dealership!</p>
