Added Email, Phone Number and Edited Privacy page

--- a/JoesUsedCars/Views/Home/Contact.cshtml
+++ b/JoesUsedCars/Views/Home/Contact.cshtml
@@ -7,3 +7,10 @@
 <p>
     Email us at <a href="mailto:support@joescars.com">support@joescars.com</a>
 </p>
+
+<address>
+    4500 Steilacoom BLVD SW<br />
+    Lakewood WA 98499-4004<br />
+    <abbr title="Phone">P:</abbr>
+    (253) 589-5800
+</address>
