--- a/JoesUsedCars/Views/Home/Privacy.cshtml
+++ b/JoesUsedCars/Views/Home/Privacy.cshtml
@@ -3,4 +3,8 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>All rights goes to the Joe's Car Dealership. If you feel unhappy feel free to contact us.</p>
+
+<div>
+    <a asp-action="Contact">Go to Contacts</a>
+</div>
