Added picture and centered text

--- a/JoesUsedCars/Views/Home/Index.cshtml
+++ b/JoesUsedCars/Views/Home/Index.cshtml
@@ -6,4 +6,10 @@
     <h1 class="display-4">Welcome to Joe's Car Dealership Website!</h1>
 </div>
 
-<p>This is the main website for the car dealership!</p>
+<div class="text-center">
+    <p>This is the main website for the car dealership!</p>
+</div>
+
+<div class="text-center">
+    <img src="~/Pictures/car.png" />
+</div>
